service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-orch
  namespace: ml-orch
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: ml-orch
